created show.js, added logo and div in index.html

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <!-- logo -->
-    <!-- <img class="logo" src="assets/flatagram-logo.png" /> -->
-    <!-- <div id='login-buttons'>
-   <button id='login'>Login</button>
-   <button id='sign-up'>Signup</button>
+    <img class="logo" src="assets/logo.png" />
+    <!-- <div id='posts'>
+  
    </div> -->
-
+   <!-- <button id='login'>Login</button>
+   <button id='sign-up'>Signup</button> -->
   
   </body>
 </html>
