rendered all posts on show.js

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,14 +4,27 @@
     <meta charset="utf-8" />
     <title>Eureka</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script defer type="text/javascript" src="index.js"></script>
+    <script defer type="text/javascript" src="show.js"></script>
+    <!-- <script defer type="text/javascript" src="index.js"></script> -->
   </head>
   <body>
     <!-- logo -->
     <img class="logo" src="assets/logo.png" />
-    <!-- <div id='posts'>
+<div>
+    <h2> Add Eureka </h2>
+    <form>
+    <label for="title">Title:</label><br>
+    <input type="text" id="name" name="name"><br>
+    <label for="description">Description:</label><br>
+    <textarea type="text" id="description" name="description"></textarea><br><br>
+    <input type="submit" value="Submit">
+    </form>`
+</div>
+    <div id='postsDiv'>
+        <ul id='posts'>
+            </ul>
   
-   </div> -->
+   </div>
    <!-- <button id='login'>Login</button>
    <button id='sign-up'>Signup</button> -->
   
